# webSearch_agent

./: README.md  classes.py  logger_colors.py  main.py  mockData.py  pyproject.toml  supabase_session.py  userContext.py  web_search_agent.py  workflow.py
high_level_agents/: deep_research_agent.py  models.py  qa_generator.py  reflection_agent.py  requirement_gathering_agent.py  synthesis_agent.py  writer_agent.py
utils/: config.py
